# willow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: README.md  compiler_bench.rs
crates/willow_runtime/: Cargo.toml
example/: README.md  arithmetic.wi  array_growth.wi  array_iteration.wi  arrays.wi  async_concurrent.wi  async_cooperative.wi  async_defer.wi  async_preemption.wi  async_sleep.wi  async_string_param.wi  async_yield.wi  atomics.wi  booleans.wi  break_continue.wi  channel_consumer.wi  channel_producer.wi  class.wi  class_hierarchy.wi  classes_objects.wi  collections_display.wi  command_line_args.wi  comments.wi  concurrent_counts.wi  constructor_visibility.wi  constructors.wi  control_flow.wi  coop_select.wi  debug_source_map.wi  default_methods.wi  defer_cleanup.wi  early_return.wi  enum_match.wi  error_conversion.wi  example.wi  f64_parse.wi  fib.wi  fib_bench.wi  file_io.wi  floats.wi  (+68 more)
example/direct_import_demo/: main.wi  shapes.wi
example/direct_import_iface_enum_demo/: main.wi  shapes.wi
example/future/: classes_objects.wi  diagnostic_async_infinite_loop.wi  diagnostic_constructor_init_rules.wi  diagnostic_private_member.wi  diagnostic_unresolved_import.wi  gc_linked_list.wi  object_argument.wi  panic.wi  pattern_matching.wi  slices_and_arrays.wi  strings.wi  task_aware_imported_helper.wi  ternary_lambda.wi  trait_like_interfaces.wi
src/: cli.rs  desugar.rs  errors.rs  interpolate.rs  lib.rs  main.rs  prelude.rs  stdlib_schema.rs  toolchain.rs
src/backend/: abi.rs  (+2 more)
tests/: integration.rs  library_api.rs
(+132 files in other folders)
