[package]
name = "willowc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "willowc"
path = "src/main.rs"

[dependencies]
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-module = "0.132"
cranelift-object = "0.132"
cranelift-native = "0.132"
target-lexicon = "0.12"
anyhow = "1"
thiserror = "2"
object = "0.36"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
